--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "grpc-nest-proto",
+  "name": "@denial/proto-deff",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
